# msf-toolbox

./: .gitignore  .pylintrc  GUIDELINES.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
dhis/src/dhis/: dhis.py
src/msftoolbox/acled/: README.md  data.py  extract.py
src/msftoolbox/azure/: README.md  __init__.py  azure_keyvault.py  azure_open_ai.md  azure_open_ai.py  azure_sql.py  azure_storage_container.py  module.py
src/msftoolbox/azure_services/: azure_open_ai.py  azure_storage_account.py  azure_storage_container.py  keyvault.py
src/msftoolbox/dhis/: metadata.py  module.py
src/msftoolbox/dhis2/: README.md  data.py  metadata.py  module.py
src/msftoolbox/gdelt/: README.md  articles.py  data.py
src/msftoolbox/kobo/: README.md  data.py  kobo_auth_example.py  kobo_mock.py
src/msftoolbox/modis/: README.md  modis_client.py
src/msftoolbox/powerbi/: README.md  module.py  power_bi.py  report.py  report_extractor.py
src/msftoolbox/reliefweb/: README.md  data.py  reports.py
src/msftoolbox/sharepoint/: README.md  files.py
src/msftoolbox/topdesk/: README.md  data.py
src/msftoolbox/unidata/: README.md  data.py
src/tests/: test_dhis.py  test_dhis2.py  test_gdelt.py  test_kobo.py  test_kobo_example.py  test_methods.py  test_modis.py  test_modis_client.py  test_reliefweb.py  test_unidata.py
