[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msftoolbox"
version = "0.1.7"
description = "The backend to perform OCR on Doctors without Borders tally sheets."
readme = "README.md"
requires-python = ">=3.10"

# Metadata about your package in case you upload it to PYPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# All the dependencies needed for running your module go here
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "azure-identity==1.12.0",
    "azure-keyvault==4.2.0",
    "azure-keyvault-certificates==4.6.0",
    "azure-keyvault-keys==4.7.0",
    "azure-keyvault-secrets==4.6.0",
    "azure-storage-blob==12.14.1",
    "azure-mgmt-core==1.3.2",
    "azure-mgmt-resource==21.1.0",
    "openai==1.45.0"

]

[project.optional-dependencies]

# If your project contains scripts you'd like to be available command line, you can define them here.
# The value must be of the form "<package_name>:<module_name>.<function>"
[project.scripts]